--- a/index.html
+++ b/index.html
@@ -1,183 +1,159 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AllFines | Premium Audio</title>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>AllFines | Premium Audio</title>
 
-  <!-- Fonts originais do AllFines -->
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <!-- 1. CORREÇÃO CRÍTICA DO AMBIENTE (Resolve 'process is not defined') -->
+    <!-- Deve ser o primeiro script para evitar erros nas bibliotecas subsequentes -->
+    <script>
+      window.process = {
+        env: { NODE_ENV: 'development' }
+      };
+    </script>
 
-  <!-- Tailwind CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: {
-            sans: ['Inter', 'sans-serif'],
-            display: ['Space Grotesk', 'sans-serif'],
-          },
-          colors: {
-            agency: {
-              yellow: '#FFD700',
-              black: '#0a0a0a',
-              dark: '#020617',
-              slate: '#1e293b',
-            }
-          },
-          animation: {
-            'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-            'fade-in': 'fadeIn 0.5s ease-out forwards',
-          },
-          keyframes: {
-            fadeIn: {
-              '0%': { opacity: '0', transform: 'translateY(10px)' },
-              '100%': { opacity: '1', transform: 'translateY(0)' },
+    <!-- 2. TAILWIND E CONFIGURAÇÃO VISUAL (Do AllFines Original) -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Inter', 'sans-serif'],
+              display: ['Space Grotesk', 'sans-serif'],
+            },
+            colors: {
+              agency: {
+                yellow: '#FFD700', // Gold/Yellow
+                black: '#0a0a0a',
+                dark: '#020617',  // Very dark blue
+                slate: '#1e293b',
+              }
+            },
+            animation: {
+              'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'fade-in': 'fadeIn 0.5s ease-out forwards',
+            },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: '0', transform: 'translateY(10px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
+              }
             }
           }
         }
       }
-    }
-  </script>
-
-  <!-- Estilos originais do AllFines (scrollbar etc) -->
-  <style>
-    body {
-      background-color: #020617;
-      color: white;
-    }
-    ::-webkit-scrollbar { width: 6px; }
-    ::-webkit-scrollbar-track { background: #020617; }
-    ::-webkit-scrollbar-thumb { background: #334155; border-radius: 0px; }
-    ::-webkit-scrollbar-thumb:hover { background: #FFD700; }
-  </style>
-
-  <!-- Babel Standalone (necessário para TSX no navegador) -->
-  <script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
-
-  <!-- Importmap atualizado e testado (funciona 100% com @google/genai no navegador) -->
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@18.3.1",
-    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
-    "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
-    "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.21.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.555.0"
-  }
-}
-</script>
-
-  <!-- Pré-carrega o entry para ficar mais rápido -->
-  <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
-</head>
-
-<body class="bg-agency-dark text-white font-sans">
-  <noscript>Você precisa habilitar o JavaScript para usar o AllFines.</noscript>
-  <div id="root"></div>
-
-  <!-- SCRIPT DE TRANSPIÇÃO IGUAL AO DO FILLshy (o que funciona perfeitamente) -->
-  <script type="module">
-    const blobCache = new Map();
-
-    async function loadSource(path, parentUrl) {
-      const baseUrl = new URL(path, parentUrl).href;
-
-      if (/\.(tsx?|jsx?)($|\?)/.test(baseUrl)) {
-        const res = await fetch(baseUrl);
-        if (!res.ok) throw new Error('Não encontrado: ' + baseUrl);
-        return { absoluteUrl: baseUrl, sourceCode: await res.text() };
+    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    
+    <!-- CSS Específico do AllFines -->
+    <style>
+      body {
+        background-color: #020617;
+        color: white;
+        overflow-y: auto;
       }
-
-      const base = baseUrl.replace(/\/$/, '');
-      const candidates = [
-        base + '.tsx',
-        base + '.ts',
-        base + '/index.tsx',
-        base + '/index.ts',
-      ];
-
-      for (const url of candidates) {
-        try {
-          const res = await fetch(url);
-          if (res.ok) {
-            return { absoluteUrl: url, sourceCode: await res.text() };
-          }
-        } catch (_) {}
+      /* Custom Scrollbar */
+      ::-webkit-scrollbar {
+        width: 6px;
       }
+      ::-webkit-scrollbar-track {
+        background: #020617; 
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #334155; 
+        border-radius: 0px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #FFD700; 
+      }
+    </style>
 
-      throw new Error('Arquivo não encontrado: ' + baseUrl);
+    <!-- 3. MOTOR DE TRANSPILAÇÃO DO CÓDIGO 1 (Babel) -->
+    <script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
+
+    <!-- 4. IMPORT MAP ROBUSTO (Baseado no Código 1) -->
+    <!-- Usamos esm.sh pois ele injeta os polyfills necessários para não dar erro de API Key/Ambiente -->
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@18.2.0",
+        "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+        "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
+        "@google/genai": "https://esm.sh/@google/genai@0.14.0",
+        "lucide-react": "https://esm.sh/lucide-react@0.300.0"
+      }
     }
+    </script>
 
-    async function resolveAndTranspile(entryPath, parentUrl = import.meta.url) {
-      const { absoluteUrl, sourceCode } = await loadSource(entryPath, parentUrl);
+    <!-- Pré-carregamento para velocidade -->
+    <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
+  </head>
 
-      if (blobCache.has(absoluteUrl)) {
-        return blobCache.get(absoluteUrl);
-      }
+  <body>
+    <!-- Fallback -->
+    <noscript>Você precisa habilitar o JavaScript para rodar esta aplicação.</noscript>
+    
+    <div id="root"></div>
 
-      // Detecta imports locais
-      const importRegex = /\bimport\s+[^'"]*['"](.*?)['"]/g;
-      const dependencies = new Map();
-      let match;
-      while ((match = importRegex.exec(sourceCode)) !== null) {
-        const depPath = match[1];
-        if (depPath.startsWith('./') || depPath.startsWith('../')) {
-          dependencies.set(depPath, null);
+    <!-- 5. LÓGICA DE TRANSPILAÇÃO E IMPORTAÇÃO (Exatamente do Código 1) -->
+    <script type="module">
+      const blobCache = new Map();
+
+      // Carrega o arquivo TS/TSX, tentando extensões padrão
+      async function loadSource(path, parentUrl) {
+        const baseUrl = new URL(path, parentUrl).href;
+
+        // Se já tem extensão, tenta direto
+        if (/\.(tsx?|jsx?)($|\?)/.test(baseUrl)) {
+          const res = await fetch(baseUrl);
+          if (!res.ok) throw new Error('Não foi possível carregar ' + baseUrl);
+          return { absoluteUrl: baseUrl, sourceCode: await res.text() };
         }
+
+        const base = baseUrl.replace(/\/$/, '');
+        const candidates = [
+          base + '.tsx',
+          base + '.ts',
+          base + '/index.tsx',
+          base + '/index.ts',
+        ];
+
+        for (const url of candidates) {
+          try {
+            const res = await fetch(url);
+            if (res.ok) {
+              return { absoluteUrl: url, sourceCode: await res.text() };
+            }
+          } catch (_) {}
+        }
+
+        throw new Error('Não foi possível encontrar o arquivo para ' + baseUrl);
       }
 
-      // Resolve dependências em paralelo
-      await Promise.all(
-        Array.from(dependencies.keys()).map(async (depPath) => {
-          const childBlob = await resolveAndTranspile(depPath, absoluteUrl);
-          dependencies.set(depPath, childBlob);
-        })
-      );
+      async function resolveAndTranspile(entryPath, parentUrl = window.location.href) {
+        // 1) Descobre o arquivo real (.tsx/.ts) e lê o código-fonte
+        const { absoluteUrl, sourceCode } = await loadSource(entryPath, parentUrl);
 
-      // Reescreve imports locais para os blobs
-      let transformedCode = sourceCode;
-      for (const [orig, blobUrl] of dependencies.entries()) {
-        const escaped = orig.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
-        const re = new RegExp(`(['"])${escaped}\\1`, 'g');
-        transformedCode = transformedCode.replace(re, `$1${blobUrl}$1`);
-      }
+        // Cache por arquivo real
+        if (blobCache.has(absoluteUrl)) {
+          return blobCache.get(absoluteUrl);
+        }
 
-      // Transpila com Babel (React + TypeScript)
-      const { code } = Babel.transform(transformedCode, {
-        presets: [
-          ['react', { runtime: 'automatic' }],
-          ['typescript', { allExtensions: true, isTSX: true }]
-        ],
-        filename: absoluteUrl,
-        sourceType: 'module'
-      });
+        // 2) Descobre imports relativos
+        const importRegex = /\bimport\s+[^'"]*['"](.*?)['"]/g;
+        const dependencies = new Map();
+        let match;
+        while ((match = importRegex.exec(sourceCode)) !== null) {
+          const depPath = match[1];
+          if (depPath.startsWith('.')) {
+            dependencies.set(depPath, null);
+          }
+        }
 
-      const blobUrl = URL.createObjectURL(
-        new Blob([code], { type: 'application/javascript' })
-      );
-
-      blobCache.set(absoluteUrl, blobUrl);
-      return blobUrl;
-    }
-
-    // Inicia a aplicação
-    (async () => {
-      try {
-        const entry = await resolveAndTranspile('/index.tsx');
-        await import(entry);
-      } catch (err) {
-        console.error('Erro fatal no AllFines:', err);
-        document.getElementById('root').innerHTML = `
-          <div style="padding:40px; text-align:center; font-family:monospace; color:#ff6666; background:#1a0a0a; margin:20px; border-radius:12px;">
-            <h2>Erro na Aplicação AllFines</h2>
-            <p>${err.message}</p>
-            <small>Verifique o console (F12)</small>
-          </div>`;
-      }
-    })();
-  </script>
-</body>
-</html>
+        // 3) Resolve recursivamente as dependências em paralelo
+        await Promise.all(
+          Array.from(dependencies.keys()).map(async (depPath) => {
+            const childBlobUrl = await resolveAndTranspile(depPath, absoluteUrl);
+            dependenci
