--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AllFines | Premium Audio</title>
-  
-  <!-- Preload para acelerar o início -->
-  <link rel="modulepreload" href="https://esm.sh/react@18.3.1" />
-  <link rel="modulepreload" href="https://esm.sh/lucide-react@0.555.0" />
 
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Configuração Tailwind (Do seu código original) -->
   <script>
     tailwind.config = {
       theme: {
@@ -51,131 +49,149 @@
     ::-webkit-scrollbar-track { background: #020617; }
     ::-webkit-scrollbar-thumb { background: #334155; border-radius: 0px; }
     ::-webkit-scrollbar-thumb:hover { background: #FFD700; }
+    html { overflow-y: auto; }
   </style>
 
-  <!-- Babel -->
-  <script src="https://unpkg.com/@babel/standalone@7.25.6/babel.min.js"></script>
+  <!-- Babel Standalone (Versão estável) -->
+  <script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
 
-  <!-- Import Map -->
+  <!-- Import Map Otimizado -->
   <script type="importmap">
   {
     "imports": {
-      "react": "https://esm.sh/react@18.3.1",
-      "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
-      "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
-      "lucide-react": "https://esm.sh/lucide-react@0.555.0",
-      "@google/genai": "https://esm.sh/@google/generative-ai@0.21.0",
-      "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.21.0"
+      "react": "https://esm.sh/react@18.2.0",
+      "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+      "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
+      "lucide-react": "https://esm.sh/lucide-react@0.300.0",
+      
+      <!-- Truque: Redireciona @google/genai para a lib Generative AI correta que funciona no browser -->
+      "@google/genai": "https://esm.sh/@google/generative-ai@0.1.3",
+      "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.1.3"
     }
   }
   </script>
+
+  <!-- Preload para acelerar -->
+  <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
 </head>
 
 <body class="bg-agency-dark text-white font-sans">
   <div id="root"></div>
 
   <script type="module">
-    // 1. Definição Global de Process (Crítico para libs React funcionarem)
-    globalThis.process = { env: { NODE_ENV: 'production' } };
+    // 1. CORREÇÃO CRÍTICA PARA TELA AZUL (React precisa disso)
+    window.process = { env: { NODE_ENV: 'production' } };
 
     const blobCache = new Map();
 
-    // 2. Carregamento Otimizado (Paralelo)
+    // 2. BUSCA PARALELA (Resolve o "demorando abrir")
+    // Em vez de testar um por um, testa todos os caminhos possíveis ao mesmo tempo
     async function loadSource(path, parentUrl) {
       const baseUrl = new URL(path, parentUrl).href;
 
       // Se já tem extensão, carrega direto
-      if (/\.(tsx?|jsx?)$/i.test(baseUrl)) {
+      if (/\.(tsx?|jsx?)($|\?)/.test(baseUrl)) {
         const res = await fetch(baseUrl);
-        if (!res.ok) throw new Error(`404: ${baseUrl}`);
-        return { url: baseUrl, source: await res.text() };
+        if (!res.ok) throw new Error('Não foi possível carregar ' + baseUrl);
+        return { absoluteUrl: baseUrl, sourceCode: await res.text() };
       }
 
-      // Se não tem extensão, tenta todas ao mesmo tempo para não perder tempo
+      // Candidatos a arquivo
+      const base = baseUrl.replace(/\/$/, '');
       const candidates = [
-        baseUrl + '.tsx',
-        baseUrl + '.ts',
-        baseUrl + '/index.tsx',
-        baseUrl + '/index.ts'
+        base + '.tsx',
+        base + '.ts',
+        base + '/index.tsx',
+        base + '/index.ts',
       ];
 
-      // Dispara todas as requisições
+      // Promise.any ou lógica manual de "primeiro que der certo"
+      // Isso faz ser muito mais rápido que o loop sequencial
       const promises = candidates.map(url => 
-        fetch(url).then(res => ({ url, res })).catch(() => ({ url, res: { ok: false } }))
+        fetch(url).then(async res => {
+          if (res.ok) return { absoluteUrl: url, sourceCode: await res.text() };
+          throw new Error('404');
+        })
       );
 
-      const results = await Promise.all(promises);
-      const found = results.find(r => r.res.ok);
-
-      if (found) {
-        return { url: found.url, source: await found.res.text() };
+      try {
+        // Pega o primeiro que resolver (Promise.any é moderno, mas vamos usar uma lógica segura)
+        return await Promise.any(promises);
+      } catch (e) {
+        throw new Error('Não foi possível encontrar o arquivo para ' + baseUrl);
       }
-
-      throw new Error(`Arquivo não encontrado: ${path}`);
     }
 
-    // 3. Transpilação Robusta (Igual ao Código 1)
-    async function resolveAndTranspile(path, parentUrl = import.meta.url) {
-      const { url, source } = await loadSource(path, parentUrl);
+    async function resolveAndTranspile(entryPath, parentUrl = window.location.href) {
+      // 1) Carrega o código (agora rápido)
+      const { absoluteUrl, sourceCode } = await loadSource(entryPath, parentUrl);
 
-      if (blobCache.has(url)) return blobCache.get(url);
-
-      // Regex para encontrar imports locais
-      const importRegex = /\bimport\s+[^'"]*['"]((\.{1,2}[^'"]*))['"]/g;
-      const localImports = [];
-      let match;
-      
-      // Coleta todos os imports
-      while ((match = importRegex.exec(source)) !== null) {
-        localImports.push(match[1]);
+      if (blobCache.has(absoluteUrl)) {
+        return blobCache.get(absoluteUrl);
       }
 
-      // Resolve dependências recursivamente em paralelo
-      const resolvedBlobs = await Promise.all(
-        localImports.map(imp => resolveAndTranspile(imp, url))
+      // 2) Descobre imports
+      const importRegex = /\bimport\s+[^'"]*['"](.*?)['"]/g;
+      const dependencies = new Map();
+      let match;
+      while ((match = importRegex.exec(sourceCode)) !== null) {
+        const depPath = match[1];
+        if (depPath.startsWith('.')) {
+          dependencies.set(depPath, null);
+        }
+      }
+
+      // 3) Resolve recursivamente
+      await Promise.all(
+        Array.from(dependencies.keys()).map(async (depPath) => {
+          const childBlobUrl = await resolveAndTranspile(depPath, absoluteUrl);
+          dependencies.set(depPath, childBlobUrl);
+        })
       );
 
-      let code = source;
+      // 4) Reescreve imports
+      let transformedCode = sourceCode;
+      for (const [originalPath, blobUrl] of dependencies.entries()) {
+        const re = new RegExp(`(['"])${originalPath}\\1`, 'g');
+        transformedCode = transformedCode.replace(re, `$1${blobUrl}$1`);
+      }
 
-      // Substitui os imports pelos Blobs gerados
-      localImports.forEach((imp, index) => {
-        const blobUrl = resolvedBlobs[index];
-        // Escape seguro para regex
-        const escapedImp = imp.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
-        code = code.replace(new RegExp(`(['"])${escapedImp}\\1`, 'g'), `$1${blobUrl}$1`);
-      });
+      // === CORREÇÃO GOOGLE GENAI ===
+      // Substitui "GoogleGenAI" (antigo/incorreto) por "GoogleGenerativeAI" (correto da lib)
+      // Isso corrige o erro: "does not provide an export named 'GoogleGenAI'"
+      transformedCode = transformedCode.replace(/\bGoogleGenAI\b/g, 'GoogleGenerativeAI');
 
-      // Transpilação Babel (Preset igual ao código 1 para garantir compatibilidade)
-      const transformed = Babel.transform(code, {
+      // 5) Transpila com Babel (Igual ao seu código 1)
+      const { code } = Babel.transform(transformedCode, {
         presets: [
           ['react', { runtime: 'automatic' }],
           ['typescript', { allExtensions: true, isTSX: true }]
         ],
-        filename: url,
-        sourceType: 'module'
+        sourceType: 'module',
+        filename: absoluteUrl
       });
 
       const blobUrl = URL.createObjectURL(
-        new Blob([transformed.code], { type: 'application/javascript' })
+        new Blob([code], { type: 'application/javascript' })
       );
 
-      blobCache.set(url, blobUrl);
+      blobCache.set(absoluteUrl, blobUrl);
       return blobUrl;
     }
 
-    // 4. Inicialização
     (async () => {
       try {
-        const entry = await resolveAndTranspile('/index.tsx');
-        await import(entry);
-      } catch (err) {
-        console.error('Erro ao iniciar app:', err);
-        document.getElementById('root').innerHTML = `
-          <div style="padding:40px; text-align:center; color:#ff6b6b; font-family:sans-serif;">
-            <h2 style="font-size:24px; margin-bottom:10px;">Erro ao carregar aplicação</h2>
-            <p style="background:rgba(255,0,0,0.1); padding:15px; border-radius:8px; display:inline-block;">${err.message}</p>
-          </div>
-        `;
+        const entryModuleUrl = await resolveAndTranspile('/index.tsx');
+        await import(entryModuleUrl);
+      } catch (error) {
+        console.error('Falha ao inicializar a aplicação:', error);
+        const rootEl = document.getElementById('root');
+        rootEl.innerHTML =
+          `<div style="color:#ff8b8b; background:#2b0f0f; padding:20px; border-radius:8px; font-family:monospace; white-space:pre-wrap; margin: 20px;">
+             <h2 style="font-size: 1.5em; margin-bottom: 10px;">Erro na Aplicação</h2>
+             <p>${error.message}</p>
+             <p style="font-size: 0.8em; color: #aaa; margin-top:10px;">Verifique o console (F12) para mais detalhes.</p>
+           </div>`;
       }
     })();
   </script>
