--- a/index.html
+++ b/index.html
@@ -52,22 +52,24 @@
     ::-webkit-scrollbar-thumb:hover { background: #FFD700; }
   </style>
 
-  <!-- Babel -->
+  <!-- Babel Standalone -->
   <script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
 
-  <!-- Import Map - CORRIGIDO -->
+  <!-- Import map das libs - CORRIGIDO -->
   <script type="importmap">
-  {
-    "imports": {
-      "react": "https://esm.sh/react@18.2.0",
-      "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-      "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
-      "lucide-react": "https://esm.sh/lucide-react@0.454.0?external=react"
-    }
+{
+  "imports": {
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
+    "lucide-react": "https://esm.sh/lucide-react@0.454.0?external=react",
+    "@google/genai": "https://esm.sh/@google/generative-ai@0.21.0",
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.21.0"
   }
-  </script>
+}
+</script>
 
-  <!-- Preload -->
+  <!-- Pré-carrega o entry -->
   <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
 </head>
 
@@ -77,13 +79,15 @@
 
   <script type="module">
     // Polyfill para process.env
-    globalThis.process = globalThis.process || { env: {} };
+    globalThis.process = globalThis.process || { env: { NODE_ENV: 'production' } };
 
     const blobCache = new Map();
 
+    // Carrega o arquivo TS/TSX, tentando extensões padrão (.tsx, .ts, /index.tsx, /index.ts)
     async function loadSource(path, parentUrl) {
       const baseUrl = new URL(path, parentUrl).href;
 
+      // Se já tem extensão, tenta direto
       if (/\.(tsx?|jsx?)($|\?)/.test(baseUrl)) {
         const res = await fetch(baseUrl);
         if (!res.ok) throw new Error('Não foi possível carregar ' + baseUrl);
@@ -104,20 +108,24 @@
           if (res.ok) {
             return { absoluteUrl: url, sourceCode: await res.text() };
           }
-        } catch (_) {}
+        } catch (_) {
+          // ignora, tenta o próximo
+        }
       }
 
       throw new Error('Não foi possível encontrar o arquivo para ' + baseUrl);
     }
 
     async function resolveAndTranspile(entryPath, parentUrl = window.location.href) {
+      // 1) Descobre o arquivo real (.tsx/.ts) e lê o código-fonte
       const { absoluteUrl, sourceCode } = await loadSource(entryPath, parentUrl);
 
+      // Cache por arquivo real (URL com extensão)
       if (blobCache.has(absoluteUrl)) {
         return blobCache.get(absoluteUrl);
       }
 
-      // Descobre imports relativos
+      // 2) Descobre imports relativos (somente "import ... from '...';")
       const importRegex = /\bimport\s+[^'"]*['"](.*?)['"]/g;
       const dependencies = new Map();
       let match;
@@ -128,7 +136,7 @@
         }
       }
 
-      // Resolve dependências em paralelo
+      // 3) Resolve recursivamente as dependências em paralelo
       await Promise.all(
         Array.from(dependencies.keys()).map(async (depPath) => {
           const childBlobUrl = await resolveAndTranspile(depPath, absoluteUrl);
@@ -136,14 +144,18 @@
         })
       );
 
-      // Reescreve imports locais
+      // 4) Reescreve os imports locais para apontar para os blobs
       let transformedCode = sourceCode;
       for (const [originalPath, blobUrl] of dependencies.entries()) {
-        const re = new RegExp(`(['"])${originalPath.replace(/[.*+?^${}()|[\]\\]/g, '\\$&')}\\1`, 'g');
+        const escapedPath = originalPath.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
+        const re = new RegExp(`(['"])${escapedPath}\\1`, 'g');
         transformedCode = transformedCode.replace(re, `$1${blobUrl}$1`);
       }
 
-      // Transpila
+      // 5) PATCH: Corrige GoogleGenAI -> GoogleGenerativeAI
+      transformedCode = transformedCode.replace(/\bGoogleGenAI\b/g, 'GoogleGenerativeAI');
+
+      // 6) Transpila TSX -> JS com Babel (React + TypeScript)
       const { code } = Babel.transform(transformedCode, {
         presets: [
           ['react', { runtime: 'automatic' }],
@@ -153,6 +165,7 @@
         filename: absoluteUrl
       });
 
+      // 7) Cria um Blob URL para esse módulo e guarda em cache
       const blobUrl = URL.createObjectURL(
         new Blob([code], { type: 'application/javascript' })
       );
@@ -163,15 +176,17 @@
 
     (async () => {
       try {
+        // Entrada da app: ajuste aqui se seu entry não for /index.tsx
         const entryModuleUrl = await resolveAndTranspile('/index.tsx');
         await import(entryModuleUrl);
       } catch (error) {
-        console.error('Erro ao iniciar:', error);
-        document.getElementById('root').innerHTML = `
-          <div style="color:#ff8b8b; background:#2b0f0f; padding:20px; border-radius:8px; font-family:monospace; white-space:pre-wrap; margin:20px;">
-            <h2>Erro na Aplicação</h2>
-            <p>${error.message}</p>
-          </div>`;
+        console.error('Falha ao inicializar a aplicação:', error);
+        const rootEl = document.getElementById('root');
+        rootEl.innerHTML =
+          `<div style="color:#ff8b8b; background:#2b0f0f; padding:20px; border-radius:8px; font-family:monospace; white-space:pre-wrap; margin: 20px;">
+             <h2>Erro na Aplicação</h2>
+             <p>${error.message}</p>
+           </div>`;
       }
     })();
   </script>
